<resources>
    <string name="app_name">Rutero</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario/Contraseña Invalido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Fallo al ingresar"</string>

    <!-- Strings related to login -->
    <string name="prompt_client">Cliente</string>
    <string name="trans_logo">trans_logo</string>
    <string name="trans_marca_regi">trans_marca_regi</string>
    <string name="trans_background">trans_background</string>
    <string name="nav_header_title">Rutero</string>
    <string name="nav_header_subtitle">Usuario - Cliente</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_calendario">Ruta</string>
    <string name="menu_stock_producto">Stock Producto</string>
    <string name="ayuda">Ayuda</string>
    <string name="menu_formulario">Formulario</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="aceptar">Aceptar</string>
</resources>