<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:transitionName="@string/trans_background"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo_visualiti"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:alpha="0.0"
        android:src="@mipmap/ic_launcher_round"
        android:transitionName="@string/trans_logo" />

    <TextView
        android:id="@+id/marca_registrada_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo_visualiti"
        android:layout_alignRight="@+id/logo_visualiti"
        android:layout_below="@+id/logo_visualiti"
        android:layout_marginRight="16dp"
        android:alpha="0.0"
        android:text="APP RUTERO"
        android:textColor="@color/smsp_item_list_hint_background"
        android:transitionName="@string/trans_marca_regi" />

</RelativeLayout>